--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.11",
-    "@react-navigation/native": "^6.1.6",
-    "@react-navigation/native-stack": "^6.9.12",
+    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.16",
     "expo": "~48.0.11",
     "expo-status-bar": "~1.4.4",
     "react": "^18.2.0",
-    "react-native": "^0.71.7",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "^3.20.0"
+    "react-native": "^0.71.14",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.27.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.23.2"
   },
   "private": true
 }
